--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Артем Исламов - верстка сайтов на HTML и CSS">
+    <meta property="og:title" content="Dmitriy Sizov - верстка сайтов на HTML и CSS">
     <meta property="og:image" content="">
     <meta property="og:description" content="Закажите разработку сайта без посредников от 5 990 рублей">
     <meta property="og:site_name" content="Портфолио верстальщика">
-    <meta property="article:author" content="Артем Исламов">
+    <meta property="article:author" content="Dmitriy Sizov">
     <title>Дмитрий Сизов - Портфолио</title>
     <link href="h ttps://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,30 +30,30 @@
      <p>Верстка сайтов на HTML и CSS<br>Разработка сайтов</p>
    </div>
    </div>
-   <a class="main-down" href="#"><i class="icon-down"></i></a>
+   <a class="main-down slowly" href="#portfolio"><i class="icon-down"></i></a>
  </div>
 
-<!-- Портфолио страница2 -->
+<!-- Портфолио страница 2 -->
 
- <div class="portfolio">
+ <div class="portfolio" id="portfolio">
    <div class="container">
         <h2 class="section-header">Портфолио</h2>
      <div class="row">
        <div class="col-md-4">
          <div class="portfolio-block">
-         <img src="img/portfolio/1.jpg" alt="Работа №1">
+         <img src="img/Portfolio/1.jpg" alt="Работа №1">
          <a data-toggle="modal" data-work='work-1' href="#work">Смотреть работу</a>
          </div>
        </div>
        <div class="col-md-4">
          <div class="portfolio-block">
-         <img src="img/portfolio/2.jpg" alt="Работа №2">
+         <img src="img/Portfolio/2.jpg" alt="Работа №2">
          <a data-toggle="modal" data-work='work-2' href="#work">Смотреть работу</a>
          </div>
        </div>
        <div class="col-md-4">
          <div class="portfolio-block">
-         <img src="img/portfolio/3.jpg" alt="Работа №3">
+         <img src="img/Portfolio/3.jpg" alt="Работа №3">
          <a data-toggle="modal" data-work='work-3' href="#work">Смотреть работу</a>
          </div>
        </div>
@@ -110,9 +110,6 @@
     </div>
   </div>
 </div>
-
-
-
   
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -126,6 +123,23 @@
           modal.find('.modal-body').load(work+'.html');
         });
       });
+    </script>
+    
+    <script>
+      $(document).ready(function() {
+            //навигация - плавный скроллинг к якорю
+            $(".slowly").on("click", function (event) {
+                //отменяем стандартную обработку нажатия по ссылке
+                event.preventDefault();
+                //забираем идентификатор бока с атрибута href
+                var id  = $(this).attr('href'),
+                //узнаем высоту от начала страницы до блока на который ссылается якорь
+                top = $(id).offset().top;
+                //анимируем переход на расстояние - top за 1500 мс
+                $('body,html').animate({scrollTop: top}, 800);
+            });
+
+});
     </script>
   </body>
 </html>
