--- a/work-1.html
+++ b/work-1.html
@@ -1,10 +1,10 @@
 <div class="row">
-   <div class="col-lg-5">
+   <div class="col-lg-4">
       <img src="img/Portfolio/1.jpg" alt="Пример №1">
    </div>
-          <div class="col-lg-7">
+          <div class="col-lg-8">
             <h4>Сайт для ресторана</h4>
-            <p>Описание сайта</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, obcaecati, placeat? Rem magnam alias obcaecati voluptate similique doloribus repudiandae corporis repellendus nihil nulla doloremque eaque aliquam aspernatur aperiam, consequuntur voluptates fugiat! Vitae expedita, eveniet architecto, modi est maiores consectetur consequuntur dignissimos assumenda laboriosam quia, repudiandae perspiciatis, sed facilis commodi iste error odio. Inventore saepe rem id, repellat velit hic assumenda consequuntur, corporis adipisci quia, aperiam tempora. A tempore eligendi neque unde ipsum optio alias doloribus perferendis ducimus. Nulla excepturi ex enim quasi et aperiam obcaecati tenetur cumque pariatur eius corrupti, nisi, non, odio eveniet necessitatibus quas in culpa aliquam suscipit.</p>
             <a href="https://vk.me/id442446527" class="modal-btn">Заказать</a>
           </div>
 </div>
