--- a/work-2.html
+++ b/work-2.html
@@ -1,10 +1,10 @@
 <div class="row">
-   <div class="col-lg-5">
+   <div class="col-lg-4">
       <img src="img/Portfolio/2.jpg" alt="Пример №2">
    </div>
-          <div class="col-lg-7">
+          <div class="col-lg-8">
             <h4>Сайт для Rubber Ducky</h4>
-            <p>Описание сайта</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum exercitationem error maiores provident. Atque omnis odio, rerum repudiandae suscipit quam delectus officiis commodi nulla! Eligendi nostrum maiores incidunt vero accusamus adipisci totam, quod culpa enim quas perspiciatis in a, eaque autem sapiente dignissimos, ut illo aspernatur. Perspiciatis veritatis autem quaerat ea laboriosam laudantium porro ab voluptate pariatur accusantium enim, at aperiam deserunt esse consectetur doloribus possimus! Dolorum aut vitae ipsum nesciunt eaque sapiente distinctio velit reiciendis expedita! Ipsam repudiandae quos in accusantium laboriosam fugit, fugiat necessitatibus minus temporibus, beatae neque soluta expedita dolorum modi? Quae fugit omnis repellendus praesentium, eveniet.</p>
             <a href="https://vk.me/id442446527" class="modal-btn">Заказать</a>
           </div>
 </div>
