--- a/work-3.html
+++ b/work-3.html
@@ -1,10 +1,10 @@
 <div class="row">
-   <div class="col-lg-5">
+   <div class="col-lg-4">
       <img src="img/Portfolio/3.jpg" alt="Пример №3">
    </div>
-          <div class="col-lg-7">
+          <div class="col-lg-8">
             <h4>Сайт для Trego touring</h4>
-            <p>Описание сайта</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus porro fuga mollitia quam possimus laborum a quae perspiciatis similique aliquam doloribus labore ad maiores dolor nostrum nulla, alias, aspernatur earum. Aliquid maxime, explicabo repellendus aut id cupiditate quia, deserunt recusandae quaerat delectus dolor placeat alias incidunt asperiores rem fugit. Provident aspernatur placeat quidem neque veniam laborum esse iste architecto eligendi quisquam sequi, necessitatibus optio, aperiam inventore ipsa cum incidunt commodi explicabo blanditiis quam, sit amet. Porro recusandae optio eaque, odit harum. Ullam beatae, ex consectetur? Temporibus tempore rem est aliquid, laboriosam unde eos distinctio similique assumenda corporis quae harum eum.</p>
             <a href="https://vk.me/id442446527" class="modal-btn">Заказать</a>
           </div>
 </div>
