--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    
   </head>
   <body>
- <div class="main">
+ <div class="main parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main-bg_2o.jpg">
  <div class="main-overlay"></div>
    <div class="wrapper">
      <div class="mainheader">
@@ -42,19 +42,19 @@
        <div class="col-md-4">
          <div class="portfolio-block">
          <img src="img/Portfolio/1.jpg" alt="Работа №1">
-         <a data-toggle="modal" data-work='work-1' href="#work">Смотреть работу</a>
+         <a class="link cd-modal-trigger" data-work='work-1' href="#0">Смотреть работу</a>
          </div>
        </div>
        <div class="col-md-4">
          <div class="portfolio-block">
          <img src="img/Portfolio/2.jpg" alt="Работа №2">
-         <a data-toggle="modal" data-work='work-2' href="#work">Смотреть работу</a>
+         <a class="link cd-modal-trigger" data-work='work-2' href="#0">Смотреть работу</a>
          </div>
        </div>
        <div class="col-md-4">
          <div class="portfolio-block">
          <img src="img/Portfolio/3.jpg" alt="Работа №3">
-         <a data-toggle="modal" data-work='work-3' href="#work">Смотреть работу</a>
+         <a class="link cd-modal-trigger" data-work='work-3' href="#0">Смотреть работу</a>
          </div>
        </div>
      </div>
@@ -85,6 +85,18 @@
   </div>
 </div>
 
+<div class="cd-modal">
+  <div class="modal-content">
+    
+  </div> <!-- .modal-content -->
+
+  <a href="#0" class="modal-close">Close</a>
+</div> <!-- .cd-modal -->
+
+<div class="cd-transition-layer"> 
+  <div class="bg-layer"></div>
+</div> <!-- .cd-transition-layer -->
+
 <!-- Всплывающие окна -->
 
 <div class="modal fade" id="work" role="dialog">
@@ -96,16 +108,6 @@
         <h4 class="modal-title">Описание проекта</h4>
       </div>
      <div class="modal-body">
-        <!-- <div class="row">
-          <div class="col-lg-5">
-            <img src="img/Portfolio/1.jpg" alt="Пример №1">
-          </div>
-          <div class="col-lg-7">
-            <h4>Сайт для ресторана</h4>
-            <p>Описание сайта</p>
-            <a href="https://vk.me/id442446527" class="modal-btn">Заказать</a>
-          </div>
-        </div> -->
       </div> 
     </div>
   </div>
@@ -113,14 +115,14 @@
   
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/parallax.min.js"></script>
+    <script src="js/main.js"></script> <!-- Resource jQuery -->
     <script>
       $(function() {
-        var link = $('a[data-toggle="modal"]');
-        link.on('click', function(event) {
-          var work = $(this).attr('data-work');
-          var modal = $('.modal');
-          modal.find('.modal-body').load(work+'.html');
+      var link = $('.cd-modal-trigger');
+      link.on('click', function(event) {
+      var work = $(this).attr('data-work');
+      $('.modal-content').load(work+'.html');
         });
       });
     </script>
