--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Закажите разработку сайта без посредников от 5 990 рублей">
     <meta property="og:site_name" content="Портфолио верстальщика">
     <meta property="article:author" content="Dmitriy Sizov">
-    <title>Дмитрий Сизов - Портфолио</title>
+    <title>Военное обозрение</title>
     <link href="h ttps://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/fontello.css">
@@ -22,13 +22,13 @@
    
   </head>
   <body>
- <div class="main parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main-bg_2o.jpg">
+ <div class="main parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main-bg_VO.jpg">
  <div class="main-overlay"></div>
    <div class="wrapper">
      <div class="mainheader">
-     <h1>Дмитрий Сизов</h1>
+     <h1>"MilitaryReview"</h1>
      <div class="main-line"></div>   
-     <p>Верстка сайтов на HTML и CSS<br>Разработка сайтов</p>
+     <p>Информационно-аналитический канал</p>
    </div>
    </div>
    <a class="main-down slowly" href="#portfolio"><i class="icon-down"></i></a>
@@ -36,7 +36,7 @@
 
 <!-- Портфолио страница 2 -->
 
- <div class="portfolio" id="portfolio">
+ <!--<div class="portfolio" id="portfolio">
    <div class="container">
         <h2 class="section-header">Портфолио</h2>
      <div class="row">
@@ -64,8 +64,7 @@
 
 <!--Footer-->
 
-<div class="footer">
-  <div class="container">
+<!--  <div class="container">
     <div class="row">
       <div class="col-lg-3">
         <strong>Дмитрий Сизов</strong>
@@ -91,17 +90,16 @@
     
   </div> <!-- .modal-content -->
 
-  <a href="#0" class="modal-close">Close</a>
+ <!-- <a href="#0" class="modal-close">Close</a>
 </div> <!-- .cd-modal -->
 
-<div class="cd-transition-layer"> 
+<!--<div class="cd-transition-layer"> 
   <div class="bg-layer"></div>
 </div> <!-- .cd-transition-layer -->
 
 <!-- Всплывающие окна -->
 
-<div class="modal fade" id="work" role="dialog">
-  <div class="modal-dialog" role="document">
+<!--  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -114,11 +112,11 @@
   </div>
 </div>
   
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script> <!-- Resource jQuery -->
-    <script>
+    <!--<script>
       $(function() {
       var link = $('.cd-modal-trigger');
       link.on('click', function(event) {
