--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <!-- Портфолио страница 2 -->
 
- <!--<div class="portfolio" id="portfolio">
+<!--<div class="portfolio" id="portfolio">
    <div class="container">
         <h2 class="section-header">Портфолио</h2>
      <div class="row">
@@ -64,7 +64,7 @@
 
 <!--Footer-->
 
-<!--  <div class="container">
+<!--<div class="container">
     <div class="row">
       <div class="col-lg-3">
         <strong>Дмитрий Сизов</strong>
@@ -90,8 +90,7 @@
     
   </div> <!-- .modal-content -->
 
- <!-- <a href="#0" class="modal-close">Close</a>
-</div> <!-- .cd-modal -->
+<!--</div> <!-- .cd-modal -->
 
 <!--<div class="cd-transition-layer"> 
   <div class="bg-layer"></div>
@@ -99,7 +98,7 @@
 
 <!-- Всплывающие окна -->
 
-<!--  <div class="modal-dialog" role="document">
+ <!--<div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -113,7 +112,7 @@
 </div>
   
     <!--<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--!-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script> <!-- Resource jQuery -->
     <!--<script>
