--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta http-equiv="refresh" content="0;https://t.me/militaryreview">
+     <!--<meta http-equiv="refresh" content="0;https://t.me/militaryreview">!-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Dmitriy Sizov - верстка сайтов на HTML и CSS">
+    <meta property="og:title" content="Военное обозрение">
     <meta property="og:image" content="">
-    <meta property="og:description" content="Закажите разработку сайта без посредников от 5 990 рублей">
-    <meta property="og:site_name" content="Портфолио верстальщика">
+    <meta property="og:description" content="Military Review">
+    <meta property="og:site_name" content="Военное обозрение">
     <meta property="article:author" content="Dmitriy Sizov">
     <title>Военное обозрение</title>
     <link href="h ttps://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
@@ -26,15 +26,16 @@
  <div class="main-overlay"></div>
    <div class="wrapper">
      <div class="mainheader">
-     <h1>"MilitaryReview"</h1>
+     <h2>@MilitaryReview</h2>
      <div class="main-line"></div>   
-     <p>Информационно-аналитический канал</p>
+     <p>Военное обозрение<br>
+     Информационно-аналитический канал</p>
    </div>
    </div>
    <a class="main-down slowly" href="#portfolio"><i class="icon-down"></i></a>
  </div>
 
-<!-- Портфолио страница 2 -->
+<!-- Портфолио страница 2 <!--
 
 <!--<div class="portfolio" id="portfolio">
    <div class="container">
