--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
    
   </head>
   <body>
- <div class="main parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main-bg_VO.jpg">
+ <div class="main parallax-window" data-parallax="scroll" data-speed="0.4" data-image-src="img/main-bg_VO2.jpg">
  <div class="main-overlay"></div>
    <div class="wrapper">
      <div class="mainheader">
-     <h2>@MilitaryReview</h2>
+     <<h1>MilitaryReview</h1>>
      <div class="main-line"></div>   
      <p>Военное обозрение<br>
      Информационно-аналитический канал</p>
